add focus() method

--- a/src/contact-picker/contact-picker.component.html
+++ b/src/contact-picker/contact-picker.component.html
@@ -11,7 +11,7 @@
             [results]="searchResults"
             (search)="onSearch($event)"
             (select)="onSelect($event)">
-            <ng-template let-item="$implicit">
+            <ng-template let-item>
                 <span [innerHTML]="formatLabel(item)"></span>
                 <span *ngIf="differentiator" class="a-contact-picker__detail">{{item[differentiator]}}</span>
             </ng-template>
