--- a/src/contact-picker/contact-picker.component.scss
+++ b/src/contact-picker/contact-picker.component.scss
@@ -1,4 +1,6 @@
-@import "~@a-ui/core/dist/assets/styles/quarks";
+@import "~@a-ui/core/dist/assets/styles/quarks/_quarks.colors.scss";
+@import "~@a-ui/core/dist/assets/styles/quarks/_quarks.functions.scss";
+@import "~@a-ui/core/dist/assets/styles/quarks/_quarks.variables.scss";
 
 .m-contact-picker__detail {
     float: right;
