--- a/src/contact-picker/contact-picker.component.html
+++ b/src/contact-picker/contact-picker.component.html
@@ -1,6 +1,6 @@
 <div class="a-input m-contact-picker">
     <div class="a-input__wrapper">
-        <aui-auto-complete 
+        <aui-auto-complete
             remote="true"
             clearInvalid="true"
             value="id"
@@ -12,8 +12,8 @@
             (search)="onSearch($event)"
             (select)="onSelect($event)">
             <ng-template let-item>
-                <span [innerHTML]="formatLabel(item)"></span>
-                <span *ngIf="differentiator" class="m-contact-picker__detail">{{ item[differentiator] }}</span>
+                <span class="m-contact-picker__content" [innerHTML]="formatLabel(item)"></span>
+                <small *ngIf="differentiator" class="m-contact-picker__detail u-text-light u-margin-left-xs">{{ item[differentiator] }}</small>
             </ng-template>
         </aui-auto-complete>
     </div>
