--- a/src/contact-picker/contact-picker.component.scss
+++ b/src/contact-picker/contact-picker.component.scss
@@ -2,10 +2,12 @@
 @import "~@a-ui/core/dist/assets/styles/quarks/_quarks.functions.scss";
 @import "~@a-ui/core/dist/assets/styles/quarks/_quarks.variables.scss";
 
+:host ::ng-deep .m-selectable-list__item {
+  align-items: baseline;
+  display: flex;
+  justify-content: space-between;
+}
+
 .m-contact-picker__detail {
-    float: right;
-    font-size: 80%;
-    padding-top: 0.2em;
-    margin-left: 0.5em;
-    color: $text-color-light;
+    margin: 0;
 }
