Made the chatbot widget WCAG 2.1 AA compliant

--- a/example/app/app.component.html
+++ b/example/app/app.component.html
@@ -1,13 +1,24 @@
 <header>
-    <nav>
-        <a routerLink="/demo-local">Local Data</a>
-        <a routerLink="/demo-remote">Remote Data</a>
-    </nav>
-</header>
-<div class="u-wrapper">
-    <div class="u-container">
-        <main>
-            <router-outlet></router-outlet>
-        </main>
+  <div class="u-container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+        <h1 class="h3 u-margin-top-lg">Contact Picker Smart Widget</h1>
+        <nav>
+          <ul class="m-nav-tabs u-margin-top">
+            <li><a routerLink="/demo-local" routerLinkActive="is-active">Local data</a></li>
+            <li><a routerLink="/demo-remote" routerLinkActive="is-active">Remote data</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
-</div>
+  </div>
+</header>
+<main class="u-margin-top">
+  <div class="u-container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+</main>
