--- a/src/contact-picker/contact-picker.component.html
+++ b/src/contact-picker/contact-picker.component.html
@@ -1,20 +1,21 @@
 <div class="a-input m-contact-picker">
-    <div class="a-input__wrapper">
-        <aui-auto-complete
-            remote="true"
-            clearInvalid="true"
-            value="id"
-            label="name"
-            [ngModel]="value?.name"
-            [placeholder]="placeholder"
-            [noResultsText]="noDataMessage"
-            [results]="searchResults"
-            (search)="onSearch($event)"
-            (select)="onSelect($event)">
-            <ng-template let-item>
-                <span class="m-contact-picker__content" [innerHTML]="formatLabel(item)"></span>
-                <small *ngIf="differentiator" class="m-contact-picker__detail u-text-light u-margin-left-xs">{{ item[differentiator] }}</small>
-            </ng-template>
-        </aui-auto-complete>
-    </div>
+  <div class="a-input__wrapper">
+    <aui-auto-complete
+      remote="true"
+      clearInvalid="true"
+      value="id"
+      label="name"
+      data-id="{{ id }}"
+      [ngModel]="value?.name"
+      [placeholder]="placeholder"
+      [noResultsText]="noDataMessage"
+      [results]="searchResults"
+      (search)="onSearch($event)"
+      (select)="onSelect($event)">
+      <ng-template let-item>
+        <span class="m-contact-picker__content" [innerHTML]="formatLabel(item)"></span>
+        <small *ngIf="differentiator" class="m-contact-picker__detail u-text-light u-no-margin u-margin-left-xs">{{ item[differentiator] }}</small>
+      </ng-template>
+    </aui-auto-complete>
+  </div>
 </div>
